# glusterfs

./: .arcconfig  .clang-format  .gitignore  .gitmodules  .mailmap  .testignore  .unittests  3-10-dashboard  3-11-dashboard  3-12-dashboard  3-13-dashboard  3-8-dashboard  4-0-dashboard  4-1-dashboard  5-dashboard  6-dashboard  AUTHORS  CODING-GUIDELINES.txt  COMMITMENT  CONTRIBUTING  CONTRIBUTING.md  COPYING  ChangeLog  EXCEPTIONS  INSTALL  MAINTAINERS  MAINTAINERS.md  Makefile.am  NEWS  README  README.git  README.md  THANKS  TODO  autogen.sh  build.sh  build_env  buildrpm38.sh  commit.sh  configinterface.py  (+27 more)
api/examples/: Makefile.am  README  __init__.py.in  autogen.sh  configure.ac  getvolfile.py  gfapi.py  glfsxmp.c  setup.py.in
api/src/: Makefile.am  README.Symbol_Versions  gfapi-messages.h  gfapi.aliases  gfapi.map  gfapi.map.in  glfs-fops.c  glfs-handleops.c  glfs-handles.h  glfs-internal.h  glfs-master.c  glfs-mem-types.h  glfs-mgmt.c  glfs-primary.c  glfs-resolve.c  glfs.c  glfs.h
booster/src/: Makefile.am  booster-fd.c  booster-fd.h  booster.c  booster_fstab.c  booster_fstab.h  booster_stat.c  entry.c
cli/src/: Makefile.am  cli-cmd-global.c  cli-cmd-log.c  cli-cmd-misc.c  cli-cmd-parser.c  cli-cmd-peer.c  cli-cmd-probe.c  cli-cmd-snapshot.c  cli-cmd-system.c  cli-cmd-volume-bdevice.c  cli-cmd-volume.c  cli-cmd.c  cli-cmd.h  cli-mem-types.h  cli-quotad-client.c  cli-quotad-client.h  cli-rl.c  cli-rpc-ops.c  cli-xml-output.c  cli.c  cli.h  cli3_1-cops.c  input.c  registry.c
contrib/argp-standalone/: Makefile.am  acinclude.m4  argp-ba.c  argp-eexst.c  argp-fmtstream.c  argp-help.c  argp-namefrob.h  argp-parse.c  argp.h  autogen.sh  configure.ac  mempcpy.c  strcasecmp.c  strchrnul.c  strndup.c  vsnprintf.c
contrib/fuse-util/: Makefile.am  fusermount.c  mount_util.c
contrib/umountd/: Makefile.am  umountd.c
doc/: Makefile.am  Packaging.md  README.md  RelatedProjects.md  afr.lyx  authentication.txt  booster.txt  client-volume.spec.sample  coding-standard.tex  errno.list.bsd.txt  errno.list.linux.txt  errno.list.macosx.txt  fstab.sample  get_put_api_using_xattr.txt  gluster.8  glusterd.8  glusterd.vol  glusterfs-client.vol  glusterfs-client.vol.sample  glusterfs-design.txt  glusterfs-mode.el  glusterfs-server.vol  glusterfs-server.vol.sample  glusterfs-volgen.8  glusterfs.8  glusterfs.vim  glusterfs.vol.sample  glusterfsd.8  glusterfsd.conf  glusterfsd.vol.sample  handling-options.txt  logging.txt  mac-related-xattrs.txt  mount.glusterfs.8  network_compression.md  porting_guide.txt  protocol.txt  replicate.lyx  server-volume.spec.sample  solaris-related-xattrs.txt  (+8 more)
doc/TODO/: quota.txt
doc/data-structures/: iobuf.md
doc/debugging/: analyzing-regression-cores.md  coredump-analysis.md  gfid-to-path.md  mem-alloc-list.md  split-brain.md  statedump.md
doc/developer-guide/: Backport-Guidelines.md  Backport-Wishlist.md  Bug-Reporting-Guidelines.md  Bug-Triage.md  Bug-report-Life-Cycle.md  Bug-reporting-template.md  Building GlusterFS.md  Compiling-RPMS.md  Developers-Index.md  Development-Workflow.md  Easy-Fix-Bugs.md  Fixing-issues-reported-by-tools-for-static-code-analysis.md  GlusterFS-Release-process.md  Guidelines-For-Maintainers.md  Jenkins-Infrastructure.md  Jenkins-Manual-Setup.md  Language-Bindings.md  Projects.md  README.md  Simplified-Development-Workflow.md  Using-Gluster-Test-Framework.md  adding-fops.md  afr-locks-evolution.md  afr-self-heal-daemon.md  bd-xlator.md  brickmux-thread-reduction.md  coding-standard.md  coding-standard.tex  commit-guidelines.md  coredump-analysis.md  daemon-management-framework.md  datastructure-inode.md  datastructure-iobuf.md  datastructure-mem-pool.md  dirops-transactions-in-dht.md  ec-implementation.md  fuse-interrupt.md  gf-buf.md  gfapi-symbol-versions.md  identifying-resource-leaks.md  (+11 more)
doc/developer-sessions/: README.md
doc/examples/: Makefile.am  README  afr.vol  cluster-client.vol  cluster-server-ns.vol  cluster-server.vol  cluster-server1.vol  cluster-server2.vol  cluster-server3.vol  filter.vol  io-cache.vol  io-threads.vol  posix-locks.vol  protocol-client.vol  protocol-server.vol  read-ahead.vol  replicate.vol  standalone-client.vol  standalone-server.vol  stripe.vol  trace.vol  trash.vol  unify.vol  write-behind.vol
doc/features/: afr-arbiter-volumes.md  afr-statistics.md  afr-v1.md  bd-xlator.md  bd.txt  brick-failure-detection.md  ctime.md  dht.md  file-snapshot.md  ganesha-ha.md  gfid-access.md  glusterfs_nfs-ganesha_integration.md  heal-info-and-split-brain-resolution.md  libgfapi.md  mount_gluster_volume_using_pnfs.md  nufa.md  ovirt-integration.md  qemu-integration.md  quota-scalability.md  rdma-cm-in-3.4.0.txt  rdmacm.md  readdir-ahead.md  rebalance.md  server-quorum.md  shard.md  upcall.md  worm.md  zerofill.md
doc/hacker-guide/: Makefile.am  adding-fops.txt  afr.txt  bdb.txt  call-stub.txt  hacker-guide.tex  lock-ahead.txt  posix.txt  replicate.txt  write-behind.txt
doc/legacy/: Makefile.am  advanced-stripe.odg  booster.txt  coding-standard.tex  errno.list.linux.txt  errno.list.macosx.txt  errno.list.solaris.txt  fdl.texi  get_put_api_using_xattr.txt  ha.odg  handling-options.txt  mac-related-xattrs.txt  porting_guide.txt  replicate.lyx  solaris-related-xattrs.txt  stat-prefetch-design.txt  (+4 more)
extras/: .clang-format  Makefile.am  Portfile  backend-cleanup.sh  backend-xattr-sanitize.sh  check_goto.pl  checkpatch.pl  clang-checker.sh  clear_xattrs.sh  collect-system-stats.sh  contri-add.sh  control-cpu-load.sh  control-mem.sh  defrag.sh  disk_usage_sync.sh  failed-tests.py  file_size_contri.sh  generate-xdr-files.sh  gfid-to-dirname.sh  git-branch-diff.py  glfs-bm.c  gluster-rsyslog-5.8.conf  gluster-rsyslog-7.2.conf  glusterd-sysconfig  glusterd.vol  glusterd.vol.in  glusterfs-defrag.in  glusterfs-georep-logrotate  glusterfs-georep-upgrade.py  glusterfs-logrotate  glusterfs-mode.el  glusterfs-server.plist.in  glusterfs-volgen  glusterfs-volgen.py  glusterfs.spec.in  glusterfs.vim  gnfs-loganalyse.py  group-db-workload  group-distributed-virt  group-gluster-block  (+26 more)
xlators/: Makefile.am  xlator.sym
(+4261 files in other folders)
